--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/ssr": "^19.2.15",
     "@primeuix/themes": "^1.2.1",
     "express": "^4.18.2",
+    "mermaid": "^11.9.0",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.3",
     "qrcode": "^1.5.4",
